# VideoTrainer

./: .gitignore  CMakeLists.txt  hog.cpp  hog.hpp  main.cpp  nnet.cpp  nnet.hpp  train.cpp  train.hpp  video.cpp  video.hpp
